fix: change overlap in navbar

--- a/Desenvolvimento/ada/templates/static/css/layout.css
+++ b/Desenvolvimento/ada/templates/static/css/layout.css
@@ -17,8 +17,13 @@ a:not(.title):hover {
 .dropdown-login { margin-right: 10px; }
 
 /* Definições de estilo para itens de navegação */
+.container {
+    margin-top: 80px;
+}
+
 nav.navbar-nav {
-    position: fixed;
+    z-index: 1000;
+    
     background-color: #3F927E;
     color: #f9fefd;
     box-shadow: 0px 2px 8px #2a5a4f;
